--- a/css/style.css
+++ b/css/style.css
@@ -26,8 +26,8 @@ body {
 
 
 .logo-svg {
-  width: 176px;
-  height: 36px;
+    width: 176px;
+    height: 36px;
 }
 
 .navbar ul li a {
@@ -60,7 +60,7 @@ body {
     display: flex;
     align-items: center;
     margin-left: auto;
-    gap: 20px;
+    gap: 60px;
     /* gap between links and buttons */
 }
 
@@ -108,9 +108,9 @@ body {
 
 /* Mobile/Tablet Styles */
 
-  body.menu-open {
+body.menu-open {
     overflow: hidden;
-    height: 100vh; /* lock viewport */
+ 
 }
 
 @media (max-width: 1024px) {
@@ -120,11 +120,13 @@ body {
     }
 
     .navbar {
-    display: flex;
-    justify-content: space-between; /* logo left, hamburger right */
-    align-items: center;
-    padding: 10px 20px; /* optional, for spacing */
-}
+        display: flex;
+        justify-content: space-between;
+        /* logo left, hamburger right */
+        align-items: center;
+        padding: 10px 20px;
+        /* optional, for spacing */
+    }
 
     .logo img {
         height: 40px;
@@ -151,7 +153,7 @@ body {
         width: 100%;
         height: 100vh;
         padding: 20px;
-        gap: 15px;
+        gap: 50px;
         overflow-y: auto;
         z-index: 999;
     }
@@ -159,6 +161,7 @@ body {
     /* Show nav when active */
     .nav-together.active {
         display: flex;
+        align-items: flex-start;
     }
 
     .nav-links {
@@ -169,6 +172,7 @@ body {
 
     .nav-buttons {
         flex-direction: column;
+        width: 100%;
         /* stack buttons vertically */
         gap: 10px;
         /* spacing between buttons */
@@ -181,6 +185,7 @@ body {
 
     .btn.outline {
         width: 100%;
+
         /* buttons full width on mobile */
         text-align: center;
     }
